<resources>
    <string name="subtitle">Subtitle</string>
    <string name="subtitle_local">Local</string>
    <string name="subtitle_remote">Remote</string>
    <string name="channel_id">Channel ID</string>
    <string name="channel_id_input">Please input channel ID</string>
    <string name="user_id">User ID</string>
    <string name="user_id_input">Please input user ID</string>
    <string name="user_name">User Name</string>
    <string name="user_name_input">Please input user name</string>
    <string name="join_channel_as_publisher">Join Channel As Publisher</string>
    <string name="join_channel_as_subscriber">Join Channel As Subscriber</string>

</resources>