<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Channel ID -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channel_id"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:id="@+id/channelIdEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/channel_id_input"
            android:gravity="start"/>
    </LinearLayout>

    <!-- 用户ID -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:id="@+id/userIdEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/user_id_input"
            android:gravity="start"/>
    </LinearLayout>

    <!-- 用户名 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:layout_marginEnd="16dp"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/user_name_input"
            android:gravity="start"/>
    </LinearLayout>

    <!-- 加入频道按钮 -->
    <Button
        android:id="@+id/joinChannelAsPublisherButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_channel_as_publisher"
        android:layout_marginTop="16dp"/>
    <Button
        android:id="@+id/joinChannelAsSubscriberButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join_channel_as_subscriber"
        android:layout_marginTop="16dp"/>
</LinearLayout>
